Fix form input gap

--- a/style.css
+++ b/style.css
@@ -368,7 +368,7 @@ hr {
   flex-direction: column;
   justify-content: center;
   margin: 52px 0 32px;
-  gap: 15px;
+  gap: 11px;
 }
 
 .desk-form .btn {
